projects/overlays/01-acme-nuxeo/41-nuxeo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nuxeo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: acme-nuxeo.docker.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nuxeo-service
                port:
                  number: 9080
